--- a/Simple To_Do List/Base.lproj/Main.storyboard
+++ b/Simple To_Do List/Base.lproj/Main.storyboard
@@ -17,19 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="MyL-J3-ZAN">
-                                <rect key="frame" x="138.33333333333334" y="411.66666666666669" width="116.33333333333334" height="98"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="MyL-J3-ZAN">
+                                <rect key="frame" x="138.33333333333334" y="386.66666666666669" width="116.33333333333334" height="148.00000000000006"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TableVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NO-J6-TrE">
                                         <rect key="frame" x="0.0" y="0.0" width="116.33333333333333" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" systemColor="linkColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CollectionVC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jb3-fH-pYW">
-                                        <rect key="frame" x="0.0" y="74" width="116.33333333333333" height="24"/>
+                                        <rect key="frame" x="0.0" y="124" width="116.33333333333333" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" systemColor="linkColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -131,19 +131,46 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="msL-W5-X7x">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="393" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionTaskCell" id="n8y-o0-C9e" customClass="collectionTaskCell" customModule="Simple_To_Do_List" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mod-Qe-HDi">
-                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qq4-Q0-DsS">
+                                                    <rect key="frame" x="20" y="15" width="328" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KIv-HN-aPd">
+                                                    <rect key="frame" x="358" y="17.333333333333336" width="20" height="16.000000000000007"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="KIv-HN-aPd" secondAttribute="height" id="Hzh-0H-BGo"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="KIv-HN-aPd" firstAttribute="centerY" secondItem="Mod-Qe-HDi" secondAttribute="centerY" id="8Vw-ua-HEU"/>
+                                                <constraint firstItem="qq4-Q0-DsS" firstAttribute="centerY" secondItem="Mod-Qe-HDi" secondAttribute="centerY" id="Qjp-Nc-eNp"/>
+                                                <constraint firstAttribute="trailing" secondItem="KIv-HN-aPd" secondAttribute="trailing" constant="15" id="RZM-De-Bb3"/>
+                                                <constraint firstItem="KIv-HN-aPd" firstAttribute="leading" secondItem="qq4-Q0-DsS" secondAttribute="trailing" constant="10" id="T4g-eb-2PE"/>
+                                                <constraint firstItem="qq4-Q0-DsS" firstAttribute="leading" secondItem="Mod-Qe-HDi" secondAttribute="leading" constant="20" id="lAE-T7-KOO"/>
+                                                <constraint firstItem="KIv-HN-aPd" firstAttribute="top" secondItem="Mod-Qe-HDi" secondAttribute="top" constant="15" id="yab-tm-WFD"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="393" height="50"/>
+                                        <connections>
+                                            <outlet property="checkMark" destination="KIv-HN-aPd" id="ns5-sq-NUf"/>
+                                            <outlet property="taskLabel" destination="qq4-Q0-DsS" id="7Pr-E6-0HT"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -163,10 +190,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dl2-1U-9h0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1054" y="662"/>
+            <point key="canvasLocation" x="1052.6717557251909" y="661.97183098591552"/>
         </scene>
     </scenes>
     <resources>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
