--- a/Simple To_Do List/Base.lproj/Main.storyboard
+++ b/Simple To_Do List/Base.lproj/Main.storyboard
@@ -60,17 +60,48 @@
             </objects>
             <point key="canvasLocation" x="1055.7251908396945" y="-34.507042253521128"/>
         </scene>
-        <!--TestVC-->
+        <!--Move ItemsVC-->
         <scene sceneID="tb0-Jk-7xG">
             <objects>
-                <viewController storyboardIdentifier="testVC" id="ckf-EU-cNz" customClass="testVC" customModule="Simple_To_Do_List" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="testVC" id="ckf-EU-cNz" customClass="moveItemsVC" customModule="Simple_To_Do_List" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tHP-6Y-N0I">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kXb-6v-JIH">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8nT-eX-KXw">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="colorCell" id="zLS-gY-NSl" customClass="colorCell" customModule="Simple_To_Do_List" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5Tg-E6-37t">
+                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="sjy-B4-sjz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kXb-6v-JIH" firstAttribute="top" secondItem="sjy-B4-sjz" secondAttribute="top" id="Kxz-h8-Hqe"/>
+                            <constraint firstItem="sjy-B4-sjz" firstAttribute="bottom" secondItem="kXb-6v-JIH" secondAttribute="bottom" id="anw-pa-F7A"/>
+                            <constraint firstItem="kXb-6v-JIH" firstAttribute="leading" secondItem="sjy-B4-sjz" secondAttribute="leading" id="gJm-Hj-iuB"/>
+                            <constraint firstItem="sjy-B4-sjz" firstAttribute="trailing" secondItem="kXb-6v-JIH" secondAttribute="trailing" id="k58-Zj-BvH"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="guw-Y3-BFE"/>
+                    <connections>
+                        <outlet property="collectionView" destination="kXb-6v-JIH" id="iRc-Vu-r44"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ca-hA-Xd8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
